# surfelmeshing

./: CMakeLists.txt  LICENSE  README.md
applications/: CMakeLists.txt
applications/surfel_meshing/: CMakeLists.txt
applications/surfel_meshing/src/surfel_meshing/: asynchronous_meshing.cc  asynchronous_meshing.h  cuda_depth_processing.cu  cuda_depth_processing.cuh  cuda_matrix.cuh  cuda_surfel_reconstruction.cc  cuda_surfel_reconstruction.cu  cuda_surfel_reconstruction.cuh  cuda_surfel_reconstruction.h  cuda_surfel_reconstruction_kernels.cc  cuda_surfel_reconstruction_kernels.cu  cuda_surfel_reconstruction_kernels.cuh  cuda_surfel_reconstruction_kernels.h  cuda_surfels_cpu.h  cuda_util.cuh  main.cc  octree.cc  octree.h  surfel.h  surfel_meshing.cc  surfel_meshing.h  surfel_meshing_render_window.cc  surfel_meshing_render_window.h
applications/surfel_meshing/src/surfel_meshing/test/: test_octree.cc  test_triangulation.cc
cmake/: SelectCudaComputeArch.cmake
libvis/resources/: resources.qrc
libvis/src/bin2c/: main.cc
libvis/src/libvis/: camera.h  camera_frustum.h  camera_frustum_opengl.h  command_line_parser.cc  command_line_parser.h  eigen.h  image.cc  image.h  image_cache.h  image_display.cc  image_display.h  image_display_qt_widget.cc  image_display_qt_widget.h  image_display_qt_window.cc  image_display_qt_window.h  image_frame.h  image_io.cc  image_io.h  image_io_libpng.cc  image_io_libpng.h  image_io_netpbm.cc  image_io_netpbm.h  image_io_qt.cc  image_io_qt.h  libvis.cc  libvis.h  lm_optimizer.h  lm_optimizer_impl.h  lm_optimizer_update_accumulator.h  mesh.h  mesh_opengl.h  opengl.cc  opengl.h  opengl_context.cc  opengl_context.h  patch_match_stereo.cc  patch_match_stereo.h  point_cloud.h  point_cloud_opengl.h  qt_thread.cc  (+24 more)
libvis/src/libvis/cuda/: cuda_auto_tuner.h  cuda_buffer.cu  cuda_buffer.cuh  cuda_buffer.h  cuda_buffer_inl.h  cuda_matrix.cuh  cuda_unprojection_lookup.cu  cuda_unprojection_lookup.cuh  cuda_unprojection_lookup.h  cuda_util.h
libvis/src/libvis/shaders/: license_header.h  shader.frag  shader.vert
libvis/src/libvis/test/: camera.cc  image.cc  image_cache.cc  lm_optimizer.cc  point_cloud.cc
